k8s/dev/words.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words
  template:
    metadata:
      labels:
        app: words
    spec:
      containers:
        - name: words
          image: iampetrovpavel/english-words
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
