k8s/dev/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    name: api
spec:
  selector:
    matchLabels:
      name: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        name: api
    spec:
      containers:
        - name: api
          image: iampetrovpavel/english-api
          # imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 3000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    name: api-service
spec:
  # type: NodePort
  # sessionAffinity: ClientIP
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
    - port: 443
      name: https
      targetPort: 3000
      protocol: TCP
  selector:
    app: api
