k8s/dev/words-postgre.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words-postgre
  labels:
    name: words-postgre
spec:
  selector:
    matchLabels:
      name: words-postgre
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: words-postgre
    spec:
      containers:
        - image: postgres
          name: words-postgre
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data/wordsdb
              name: postgre-data
      restartPolicy: Always
      volumes:
        - name: postgre-data
          persistentVolumeClaim:
            claimName: postgre-data
---

apiVersion: v1
kind: Service
metadata:
  name: words-postgre
  labels:
    name: words-postgre
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: words-postgre
