k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "english-ip"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: test.ru
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service: 
                name: api-service
                port: 
                  number: 80
